crates/ars-components/src/utility/snapshots/ars_components__utility__error_boundary__tests__error_boundary_item.snap
---
source: crates/ars-components/src/utility/error_boundary.rs
expression: snapshot_attrs(&item_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "item",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "error-boundary",
            ),
        ),
    ],
    styles: [],
}
