crates/ars-components/src/utility/snapshots/ars_components__utility__error_boundary__tests__error_boundary_message.snap
---
source: crates/ars-components/src/utility/error_boundary.rs
expression: snapshot_attrs(&message_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "message",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "error-boundary",
            ),
        ),
    ],
    styles: [],
}
